--- a/index.html
+++ b/index.html
@@ -1,1 +1,377 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Psych Diaries Pomodoro</title>
+  <style>
+    :root{
+      /* Logo-inspired palette (warm terracotta + blush-beige) */
+      --bg: #ffffff;
+      --ink: #3a2f2a;
+      --terracotta: #9b4d3f;
+      --terracotta-2: #b35f52;
+      --beige: #f3ede7;
+      --beige-2: #e8ddd4;
+      --shadow: 0 14px 40px rgba(0,0,0,.16);
+
+      /* Progress fill */
+      --fill-focus: rgba(155, 77, 63, .16);
+      --fill-break: rgba(179, 95, 82, .12);
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body{
+      margin: 0;
+      display: grid;
+      place-items: center;
+      background: radial-gradient(1200px 600px at 50% 10%, var(--beige) 0%, #fff 60%, #fff 100%);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color: var(--ink);
+    }
+
+    /* Notion embed friendly size */
+    .card{
+      width: min(460px, 92vw);
+      border-radius: 28px;
+      background: rgba(255,255,255,.86);
+      border: 1px solid rgba(155,77,63,.14);
+      box-shadow: var(--shadow);
+      position: relative;
+      overflow: hidden;
+      padding: 18px 18px 16px;
+      backdrop-filter: blur(10px);
+    }
+
+    /* Logo as background watermark */
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:-40px;
+      background-image: url("logo.png");
+      background-repeat: no-repeat;
+      background-position: center 12%;
+      background-size: 95%;
+      opacity: .15;
+      transform: rotate(-2deg);
+      pointer-events:none;
+      filter: saturate(1.05);
+    }
+
+    /* soft top title row */
+    .top{
+      position: relative;
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 10px;
+      padding: 4px 6px 10px;
+    }
+    .brand{
+      font-weight: 650;
+      letter-spacing: .2px;
+      color: rgba(58,47,42,.88);
+      font-size: 16px;
+    }
+    .pill{
+      display:flex;
+      align-items:center;
+      gap: 8px;
+      border-radius: 999px;
+      padding: 8px 12px;
+      background: rgba(243,237,231,.85);
+      border: 1px solid rgba(155,77,63,.14);
+      font-size: 13px;
+      color: rgba(58,47,42,.75);
+      user-select:none;
+    }
+    .pill input{ accent-color: var(--terracotta); }
+
+    .content{
+      position: relative;
+      display:grid;
+      place-items:center;
+      padding: 12px 8px 8px;
+    }
+
+    /* The "teddy area" proxy: a rounded panel that fills up */
+    .stage{
+      width: min(340px, 78vw);
+      aspect-ratio: 1 / 1;
+      border-radius: 32px;
+      background: rgba(255,255,255,.72);
+      border: 1px solid rgba(155,77,63,.12);
+      box-shadow: 0 10px 22px rgba(0,0,0,.08);
+      overflow:hidden;
+      position: relative;
+      display:grid;
+      place-items:center;
+    }
+
+    /* Fill layer */
+    .fill{
+      position:absolute;
+      left:0; right:0; bottom:0;
+      height: 0%;
+      background: linear-gradient(180deg, rgba(255,255,255,0) 0%, var(--fill-focus) 45%, var(--fill-focus) 100%);
+      transition: height .35s ease;
+      pointer-events:none;
+    }
+
+    /* A subtle inner glow */
+    .stage::after{
+      content:"";
+      position:absolute; inset:0;
+      background: radial-gradient(500px 220px at 50% 0%, rgba(255,255,255,.55), rgba(255,255,255,0) 55%);
+      pointer-events:none;
+    }
+
+    .time{
+      position: relative;
+      font-variant-numeric: tabular-nums;
+      font-size: 64px;
+      font-weight: 720;
+      letter-spacing: 1px;
+      color: rgba(58,47,42,.88);
+      text-shadow: 0 1px 0 rgba(255,255,255,.7);
+      margin-top: 6px;
+    }
+
+    .mode{
+      position: relative;
+      margin-top: 8px;
+      font-size: 14px;
+      letter-spacing: .6px;
+      color: rgba(58,47,42,.64);
+    }
+
+    .controls{
+      position: relative;
+      display:flex;
+      gap: 10px;
+      justify-content: center;
+      padding: 14px 6px 6px;
+      flex-wrap: wrap;
+    }
+
+    button{
+      border: 1px solid rgba(155,77,63,.18);
+      background: rgba(243,237,231,.9);
+      color: rgba(58,47,42,.86);
+      padding: 10px 14px;
+      border-radius: 999px;
+      cursor:pointer;
+      font-weight: 650;
+      letter-spacing: .2px;
+      transition: transform .06s ease, background .2s ease, border-color .2s ease;
+      min-width: 108px;
+    }
+    button:hover{ background: rgba(243,237,231,1); border-color: rgba(155,77,63,.28); }
+    button:active{ transform: translateY(1px); }
+    button.primary{
+      background: rgba(155,77,63,.12);
+      border-color: rgba(155,77,63,.26);
+      color: rgba(155,77,63, .95);
+    }
+    button.ghost{
+      background: rgba(255,255,255,.75);
+    }
+
+    .footer{
+      position: relative;
+      display:flex;
+      justify-content: space-between;
+      align-items:center;
+      padding: 8px 6px 0;
+      font-size: 12px;
+      color: rgba(58,47,42,.55);
+    }
+
+    .tiny{
+      display:flex; gap: 8px; align-items:center;
+    }
+    .dot{
+      width:7px; height:7px; border-radius:999px;
+      background: rgba(155,77,63,.35);
+      box-shadow: 0 0 0 4px rgba(155,77,63,.08);
+    }
+
+    @media (max-width: 360px){
+      .time{ font-size: 54px; }
+      button{ min-width: 96px; padding: 10px 12px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="card" role="application" aria-label="Pomodoro timer">
+    <div class="top">
+      <div class="brand">Psych Diaries • Pomodoro</div>
+      <label class="pill" title="Enable/disable sound">
+        <input id="soundToggle" type="checkbox" checked />
+        Sound on
+      </label>
+    </div>
+
+    <div class="content">
+      <div class="stage" aria-label="Timer display">
+        <div id="fill" class="fill"></div>
+        <div>
+          <div id="time" class="time">25:00</div>
+          <div id="mode" class="mode">Focus</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="controls">
+      <button id="startPause" class="primary">Start</button>
+      <button id="reset" class="ghost">Reset</button>
+      <button id="setBreak">Break (5)</button>
+      <button id="setFocus">Focus (25)</button>
+    </div>
+
+    <div class="footer">
+      <div class="tiny"><span class="dot"></span><span id="status">Ready</span></div>
+      <div>© Psych Diaries</div>
+    </div>
+
+    <audio id="ding" src="ding.mp3" preload="auto"></audio>
+  </div>
+
+  <script>
+    // ------- Simple Pomodoro (25/5) with "fill up" progress -------
+    const FOCUS_SECONDS = 25 * 60;
+    const BREAK_SECONDS = 5 * 60;
+
+    const elTime = document.getElementById("time");
+    const elMode = document.getElementById("mode");
+    const elStatus = document.getElementById("status");
+    const elFill = document.getElementById("fill");
+
+    const btnStartPause = document.getElementById("startPause");
+    const btnReset = document.getElementById("reset");
+    const btnSetBreak = document.getElementById("setBreak");
+    const btnSetFocus = document.getElementById("setFocus");
+
+    const ding = document.getElementById("ding");
+    const soundToggle = document.getElementById("soundToggle");
+
+    let mode = "focus"; // "focus" | "break"
+    let duration = FOCUS_SECONDS;
+    let remaining = duration;
+    let running = false;
+    let timerId = null;
+
+    function fmt(sec){
+      const m = Math.floor(sec / 60);
+      const s = sec % 60;
+      return `${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
+    }
+
+    function setMode(nextMode){
+      mode = nextMode;
+      duration = (mode === "focus") ? FOCUS_SECONDS : BREAK_SECONDS;
+      remaining = duration;
+      running = false;
+      stopTimer();
+
+      elMode.textContent = (mode === "focus") ? "Focus" : "Break";
+      elStatus.textContent = "Ready";
+      btnStartPause.textContent = "Start";
+      updateUI();
+
+      // Adjust fill tint for focus vs break
+      document.documentElement.style.setProperty(
+        "--fill-focus",
+        mode === "focus" ? "rgba(155, 77, 63, .16)" : "rgba(179, 95, 82, .12)"
+      );
+      // also update gradient baseline quickly
+      elFill.style.background = mode === "focus"
+        ? "linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(155, 77, 63, .16) 45%, rgba(155, 77, 63, .16) 100%)"
+        : "linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(179, 95, 82, .12) 45%, rgba(179, 95, 82, .12) 100%)";
+    }
+
+    function updateUI(){
+      elTime.textContent = fmt(remaining);
+
+      const progress = (duration - remaining) / duration; // 0..1
+      const pct = Math.max(0, Math.min(100, progress * 100));
+      elFill.style.height = `${pct}%`;
+    }
+
+    function playDing(){
+      if (!soundToggle.checked) return;
+      // Some browsers require a user interaction before audio can play.
+      ding.currentTime = 0;
+      ding.play().catch(() => {
+        // If autoplay is blocked, just fail silently.
+      });
+    }
+
+    function tick(){
+      if (!running) return;
+      remaining -= 1;
+      if (remaining <= 0){
+        remaining = 0;
+        updateUI();
+        playDing();
+        running = false;
+        stopTimer();
+        btnStartPause.textContent = "Start";
+        elStatus.textContent = "Done!";
+        return;
+      }
+      updateUI();
+    }
+
+    function startTimer(){
+      if (running) return;
+      running = true;
+      elStatus.textContent = "Running…";
+      timerId = setInterval(tick, 1000);
+    }
+
+    function stopTimer(){
+      if (timerId){
+        clearInterval(timerId);
+        timerId = null;
+      }
+    }
+
+    function reset(){
+      running = false;
+      stopTimer();
+      remaining = duration;
+      elStatus.textContent = "Ready";
+      btnStartPause.textContent = "Start";
+      updateUI();
+    }
+
+    // --- Button wiring ---
+    btnStartPause.addEventListener("click", () => {
+      // Ensure audio is "unlocked" after first click in some browsers:
+      if (soundToggle.checked) {
+        ding.play().then(() => { ding.pause(); ding.currentTime = 0; }).catch(()=>{});
+      }
+
+      if (!running){
+        startTimer();
+        btnStartPause.textContent = "Pause";
+      } else {
+        running = false;
+        stopTimer();
+        elStatus.textContent = "Paused";
+        btnStartPause.textContent = "Start";
+      }
+    });
+
+    btnReset.addEventListener("click", reset);
+    btnSetBreak.addEventListener("click", () => setMode("break"));
+    btnSetFocus.addEventListener("click", () => setMode("focus"));
+
+    // Initialize UI
+    setMode("focus");
+  </script>
+</body>
+</html>
 
