--- a/index.html
+++ b/index.html
@@ -1,311 +1,308 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Psych Diaries Pomodoro</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Psych Diaries Pomodoro</title>
 
-  <style>
-    :root{
-      --ink: #3a2f2a;
-      --terracotta: #9b4d3f;
-      --beige: #f3ede7;
-      --shadow: 0 14px 40px rgba(0,0,0,.16);
+<style>
+:root{
+  --ink:#3a2f2a;
+  --terracotta:#9b4d3f;
+  --beige:#fbf4ea;
+  --shadow:0 14px 40px rgba(0,0,0,.16);
+  --fill-focus:rgba(155,77,63,.16);
+  --fill-break:rgba(179,95,82,.12);
+}
 
-      --fill-focus: rgba(155, 77, 63, .16);
-      --fill-break: rgba(179, 95, 82, .12);
-    }
+*{box-sizing:border-box;}
+html,body{height:100%;}
 
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
+body{
+  margin:0;
+  display:grid;
+  place-items:center;
+  background:var(--beige);
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+  color:var(--ink);
+}
 
-    body{
-      margin: 0;
-      display: grid;
-      place-items: center;
-      background: #fbf4ea;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color: var(--ink);
-      overflow: hidden;
-    }
+/* ───────── Card ───────── */
+.card{
+  width:min(460px,92vw);
+  border-radius:28px;
+  background:rgba(255,255,255,.86);
+  border:1px solid rgba(155,77,63,.14);
+  box-shadow:var(--shadow);
+  padding:18px;
+  position:relative;
+  overflow:hidden;
+  backdrop-filter:blur(10px);
+}
 
-    /* --- Background cat video --- */
-    .bg-video{
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      opacity: 0.12;              /* tweak 0.08–0.18 */
-      pointer-events: none;
-      z-index: 0;
-    }
+/* ───────── Cat video INSIDE card ───────── */
+.card-video{
+  position:absolute;
+  inset:0;
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:.22;                 /* adjust to taste */
+  pointer-events:none;
+  z-index:0;
+}
 
-    @media (prefers-reduced-motion: reduce){
-      .bg-video{ display:none; }
-    }
+/* UI layers above video */
+.top,.content,.controls,.footer{
+  position:relative;
+  z-index:1;
+}
 
-    /* --- Card --- */
-    .card{
-      width: min(460px, 92vw);
-      border-radius: 28px;
-      background: rgba(255,255,255,.86);
-      border: 1px solid rgba(155,77,63,.14);
-      box-shadow: var(--shadow);
-      position: relative;
-      overflow: hidden;
-      padding: 18px;
-      backdrop-filter: blur(10px);
-      z-index: 1;
-    }
+/* Motion safety */
+@media (prefers-reduced-motion: reduce){
+  .card-video{display:none;}
+}
 
-    .top{
-      display:flex;
-      justify-content: space-between;
-      align-items:center;
-      padding-bottom: 10px;
-    }
+/* ───────── Top row ───────── */
+.top{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding-bottom:10px;
+}
+.brand{
+  font-weight:650;
+  font-size:16px;
+}
+.pill{
+  display:flex;
+  align-items:center;
+  gap:8px;
+  padding:8px 12px;
+  border-radius:999px;
+  background:rgba(243,237,231,.85);
+  border:1px solid rgba(155,77,63,.14);
+  font-size:13px;
+}
+.pill input{accent-color:var(--terracotta);}
 
-    .brand{
-      font-weight: 650;
-      font-size: 16px;
-      opacity: .9;
-    }
+/* ───────── Stage ───────── */
+.content{
+  display:grid;
+  place-items:center;
+  padding:12px 0;
+}
+.stage{
+  width:min(340px,78vw);
+  aspect-ratio:1/1;
+  border-radius:32px;
+  background:rgba(255,255,255,.72);
+  border:1px solid rgba(155,77,63,.12);
+  box-shadow:0 10px 22px rgba(0,0,0,.08);
+  display:grid;
+  place-items:center;
+  position:relative;
+  overflow:hidden;
+}
 
-    .pill{
-      display:flex;
-      align-items:center;
-      gap: 8px;
-      padding: 8px 12px;
-      border-radius: 999px;
-      background: rgba(243,237,231,.85);
-      border: 1px solid rgba(155,77,63,.14);
-      font-size: 13px;
-    }
+/* Progress fill */
+.fill{
+  position:absolute;
+  inset:auto 0 0 0;
+  height:0%;
+  background:linear-gradient(
+    180deg,
+    rgba(255,255,255,0),
+    var(--fill-focus)
+  );
+  transition:height .35s ease;
+}
 
-    .pill input{ accent-color: var(--terracotta); }
+/* Timer text */
+.time{
+  font-size:64px;
+  font-weight:720;
+  letter-spacing:1px;
+  text-shadow:0 1px 0 rgba(255,255,255,.7);
+}
+.mode{
+  margin-top:6px;
+  font-size:14px;
+  opacity:.65;
+  text-align:center;
+}
 
-    .content{
-      display:grid;
-      place-items:center;
-      padding: 12px 0;
-    }
+/* ───────── Controls ───────── */
+.controls{
+  display:flex;
+  gap:10px;
+  justify-content:center;
+  flex-wrap:wrap;
+  padding-top:14px;
+}
+button{
+  border:1px solid rgba(155,77,63,.18);
+  background:rgba(243,237,231,.9);
+  color:var(--ink);
+  padding:10px 14px;
+  border-radius:999px;
+  font-weight:650;
+  cursor:pointer;
+  min-width:108px;
+}
+button.primary{
+  background:rgba(155,77,63,.12);
+  border-color:rgba(155,77,63,.26);
+  color:var(--terracotta);
+}
 
-    .stage{
-      width: min(340px, 78vw);
-      aspect-ratio: 1 / 1;
-      border-radius: 32px;
-      background: rgba(255,255,255,.72);
-      border: 1px solid rgba(155,77,63,.12);
-      box-shadow: 0 10px 22px rgba(0,0,0,.08);
-      overflow:hidden;
-      position: relative;
-      display:grid;
-      place-items:center;
-    }
-
-    .fill{
-      position:absolute;
-      inset: auto 0 0 0;
-      height: 0%;
-      background: linear-gradient(
-        180deg,
-        rgba(255,255,255,0),
-        var(--fill-focus)
-      );
-      transition: height .35s ease;
-    }
-
-    .time{
-      font-size: 64px;
-      font-weight: 720;
-      letter-spacing: 1px;
-      text-shadow: 0 1px 0 rgba(255,255,255,.7);
-    }
-
-    .mode{
-      margin-top: 6px;
-      font-size: 14px;
-      letter-spacing: .6px;
-      opacity: .65;
-      text-align:center;
-    }
-
-    .controls{
-      display:flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-      padding-top: 14px;
-    }
-
-    button{
-      border: 1px solid rgba(155,77,63,.18);
-      background: rgba(243,237,231,.9);
-      color: var(--ink);
-      padding: 10px 14px;
-      border-radius: 999px;
-      font-weight: 650;
-      cursor:pointer;
-      min-width: 108px;
-    }
-
-    button.primary{
-      background: rgba(155,77,63,.12);
-      border-color: rgba(155,77,63,.26);
-      color: var(--terracotta);
-    }
-
-    .footer{
-      display:flex;
-      justify-content: space-between;
-      align-items:center;
-      padding-top: 8px;
-      font-size: 12px;
-      opacity: .6;
-    }
-
-    .dot{
-      width:7px;
-      height:7px;
-      border-radius:50%;
-      background: rgba(155,77,63,.35);
-      box-shadow: 0 0 0 4px rgba(155,77,63,.08);
-    }
-  </style>
+/* ───────── Footer ───────── */
+.footer{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding-top:8px;
+  font-size:12px;
+  opacity:.6;
+}
+.dot{
+  width:7px;height:7px;border-radius:50%;
+  background:rgba(155,77,63,.35);
+  box-shadow:0 0 0 4px rgba(155,77,63,.08);
+}
+</style>
 </head>
 
 <body>
 
-  <!-- Looping cat background -->
-  <video class="bg-video" autoplay muted loop playsinline aria-hidden="true">
+<div class="card" role="application" aria-label="Pomodoro timer">
+
+  <!-- Cat looping background -->
+  <video class="card-video" autoplay muted loop playsinline aria-hidden="true">
     <source src="catvid.mp4" type="video/mp4">
   </video>
 
-  <div class="card" role="application" aria-label="Pomodoro timer">
-
-    <div class="top">
-      <div class="brand">Psych Diaries • Pomodoro</div>
-      <label class="pill">
-        <input id="soundToggle" type="checkbox" checked>
-        Sound on
-      </label>
-    </div>
-
-    <div class="content">
-      <div class="stage">
-        <div id="fill" class="fill"></div>
-        <div>
-          <div id="time" class="time">25:00</div>
-          <div id="mode" class="mode">Focus</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="controls">
-      <button id="startPause" class="primary">Start</button>
-      <button id="reset">Reset</button>
-      <button id="setBreak">Break (5)</button>
-      <button id="setFocus">Focus (25)</button>
-    </div>
-
-    <div class="footer">
-      <div style="display:flex;gap:8px;align-items:center;">
-        <span class="dot"></span>
-        <span id="status">Ready</span>
-      </div>
-      <div>© Psych Diaries</div>
-    </div>
-
-    <audio id="ding" src="ding.mp3" preload="auto"></audio>
+  <div class="top">
+    <div class="brand">Psych Diaries • Pomodoro</div>
+    <label class="pill">
+      <input id="soundToggle" type="checkbox" checked>
+      Sound on
+    </label>
   </div>
 
+  <div class="content">
+    <div class="stage">
+      <div id="fill" class="fill"></div>
+      <div>
+        <div id="time" class="time">25:00</div>
+        <div id="mode" class="mode">Focus</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="controls">
+    <button id="startPause" class="primary">Start</button>
+    <button id="reset">Reset</button>
+    <button id="setBreak">Break (5)</button>
+    <button id="setFocus">Focus (25)</button>
+  </div>
+
+  <div class="footer">
+    <div style="display:flex;gap:8px;align-items:center;">
+      <span class="dot"></span>
+      <span id="status">Ready</span>
+    </div>
+    <div>© Psych Diaries</div>
+  </div>
+
+  <audio id="ding" src="ding.mp3" preload="auto"></audio>
+</div>
+
 <script>
-  const FOCUS_SECONDS = 25 * 60;
-  const BREAK_SECONDS = 5 * 60;
+const FOCUS_SECONDS=25*60;
+const BREAK_SECONDS=5*60;
 
-  const elTime = document.getElementById("time");
-  const elMode = document.getElementById("mode");
-  const elStatus = document.getElementById("status");
-  const elFill = document.getElementById("fill");
+const elTime=document.getElementById("time");
+const elMode=document.getElementById("mode");
+const elStatus=document.getElementById("status");
+const elFill=document.getElementById("fill");
 
-  const btnStartPause = document.getElementById("startPause");
-  const btnReset = document.getElementById("reset");
-  const btnSetBreak = document.getElementById("setBreak");
-  const btnSetFocus = document.getElementById("setFocus");
+const btnStartPause=document.getElementById("startPause");
+const btnReset=document.getElementById("reset");
+const btnSetBreak=document.getElementById("setBreak");
+const btnSetFocus=document.getElementById("setFocus");
 
-  const ding = document.getElementById("ding");
-  const soundToggle = document.getElementById("soundToggle");
+const ding=document.getElementById("ding");
+const soundToggle=document.getElementById("soundToggle");
 
-  let mode = "focus";
-  let duration = FOCUS_SECONDS;
-  let remaining = duration;
-  let running = false;
-  let timerId = null;
+let mode="focus";
+let duration=FOCUS_SECONDS;
+let remaining=duration;
+let running=false;
+let timerId=null;
 
-  function fmt(sec){
-    const m = Math.floor(sec / 60);
-    const s = sec % 60;
-    return `${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
-  }
+function fmt(sec){
+  const m=Math.floor(sec/60);
+  const s=sec%60;
+  return `${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
+}
 
-  function updateUI(){
-    elTime.textContent = fmt(remaining);
-    const pct = ((duration - remaining) / duration) * 100;
-    elFill.style.height = `${Math.max(0, pct)}%`;
-  }
+function updateUI(){
+  elTime.textContent=fmt(remaining);
+  elFill.style.height=`${((duration-remaining)/duration)*100}%`;
+}
 
-  function setMode(next){
-    mode = next;
-    duration = mode === "focus" ? FOCUS_SECONDS : BREAK_SECONDS;
-    remaining = duration;
-    running = false;
+function setMode(next){
+  mode=next;
+  duration=mode==="focus"?FOCUS_SECONDS:BREAK_SECONDS;
+  remaining=duration;
+  running=false;
+  clearInterval(timerId);
+  timerId=null;
+  elMode.textContent=mode==="focus"?"Focus":"Break";
+  elStatus.textContent="Ready";
+  btnStartPause.textContent="Start";
+  updateUI();
+}
+
+function tick(){
+  if(!running)return;
+  remaining--;
+  if(remaining<=0){
+    remaining=0;
+    updateUI();
+    if(soundToggle.checked){
+      ding.currentTime=0;
+      ding.play().catch(()=>{});
+    }
+    running=false;
     clearInterval(timerId);
-    timerId = null;
-    elMode.textContent = mode === "focus" ? "Focus" : "Break";
-    elStatus.textContent = "Ready";
-    btnStartPause.textContent = "Start";
-    updateUI();
+    elStatus.textContent="Done!";
+    btnStartPause.textContent="Start";
+    return;
   }
+  updateUI();
+}
 
-  function tick(){
-    if (!running) return;
-    remaining--;
-    if (remaining <= 0){
-      remaining = 0;
-      updateUI();
-      if (soundToggle.checked){
-        ding.currentTime = 0;
-        ding.play().catch(()=>{});
-      }
-      running = false;
-      clearInterval(timerId);
-      elStatus.textContent = "Done!";
-      btnStartPause.textContent = "Start";
-      return;
-    }
-    updateUI();
+btnStartPause.onclick=()=>{
+  if(!running){
+    running=true;
+    elStatus.textContent="Running…";
+    btnStartPause.textContent="Pause";
+    timerId=setInterval(tick,1000);
+  }else{
+    running=false;
+    clearInterval(timerId);
+    elStatus.textContent="Paused";
+    btnStartPause.textContent="Start";
   }
+};
 
-  btnStartPause.onclick = () => {
-    if (!running){
-      running = true;
-      elStatus.textContent = "Running…";
-      btnStartPause.textContent = "Pause";
-      timerId = setInterval(tick, 1000);
-    } else {
-      running = false;
-      clearInterval(timerId);
-      elStatus.textContent = "Paused";
-      btnStartPause.textContent = "Start";
-    }
-  };
+btnReset.onclick=()=>setMode(mode);
+btnSetBreak.onclick=()=>setMode("break");
+btnSetFocus.onclick=()=>setMode("focus");
 
-  btnReset.onclick = () => setMode(mode);
-  btnSetBreak.onclick = () => setMode("break");
-  btnSetFocus.onclick = () => setMode("focus");
-
-  setMode("focus");
+setMode("focus");
 </script>
 
 </body>
